--- a/FixedModeWindow.xaml
+++ b/FixedModeWindow.xaml
@@ -47,11 +47,11 @@
             <Image x:Name="PreviewImage" Stretch="Uniform"/>
         </GroupBox>
 
-        <!-- 按钮区域 -->
-        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
-            <Button Content="启用固定模式" Width="100" Margin="5" Click="EnableFixed_Click"/>
-            <Button Content="保存" Width="80" Margin="5" Click="SaveButton_Click"/>
-            <Button Content="取消" Width="80" Margin="5" Click="CancelButton_Click"/>
+        <!-- 按钮区域 -->            <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="0,10,0,0">
+                <Button Content="启用" Width="80" Margin="5" Click="EnableFixed_Click"/>
+                <Button Content="关闭" Width="80" Margin="5" Click="DisableFixed_Click"/>
+                <Button Content="保存" Width="80" Margin="5" Click="SaveButton_Click"/>
+                <Button Content="取消" Width="80" Margin="5" Click="CancelButton_Click"/>
         </StackPanel>
     </Grid>
 </Window>
